[FIX] mail: remove collapse/expand panel functionality
Purpose of this commit is to remove the collapse/expand functionality.

task-4448888

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -51,12 +51,7 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .1;
 }
 
 .o-mail-DiscussSidebarCategory-toggler {
-    &.o-compact {
-        font-size: .65rem;
-    }
-    &:not(.o-compact) {
-        line-height: 2.35; // so that same height as actions, so folding doesn't resize
-    }
+    line-height: 2.35; // so that same height as actions, so folding doesn't resize
 }
 
 .o-mail-DiscussSidebarChannel-badge.o-nonCompact {
@@ -85,10 +80,10 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .1;
 .o-mail-DiscussSidebar-unreadIndicator {
     font-size: 0.35rem;
     left: 1px;
+}
 
-    .o-mail-DiscussSidebarSubchannel &:not(.o-compact) {
-        left: map-get($spacers, 2);
-    }
+.o-mail-DiscussSidebarSubchannel .o-mail-DiscussSidebar-unreadIndicator {
+    left: map-get($spacers, 2);
 }
 
 .o-mail-DiscussSidebarCategories-searchBtn {
